@@ -1,6 +1,6 @@
 Package: MTurkR
-Version: 0.7.6
-Date: 2016-03-13
+Version: 0.7.7
+Date: 2016-04-10
 Title: R Client for the MTurk Requester API
 Authors@R: c(person("Thomas J.", "Leeper", role = c("aut", "cre"),
                     email = "thosjleeper@gmail.com"),
